hello-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubernetes.io/change-cause: ENV version 2
  labels:
    app: hello
  name: hello
spec:
  replicas: 3
  serviceName: hello
  selector:
    matchLabels:
      app: hello
      env: dev
  template:
    metadata:
      labels:
        app: hello
        env: dev
    spec:
      containers:
      - image: bob2606/hello-http:0.8.34
        name: hello-http
        volumeMounts:
          - name: status
            mountPath: /var/lib/hello-http
      volumes:
        - name: status
          emptyDir:
