www-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  annotations:
    kubernetes.io/change-cause: Test
  labels:
    app: www
  name: www
spec:
  replicas: 2
  selector:
    matchLabels:
      app: www
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: www
    spec:
      containers:
        - image: nginx:1.28
          name: nginx
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
              subPath: html
            - name: status
              mountPath: /usr/share/nginx/html/status
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
            periodSeconds: 10
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
            periodSeconds: 4
            failureThreshold: 2
          resources: {}
        - image: php:8.4-fpm
          name: php
          volumeMounts:
            - name: data
              mountPath: /var/www/html
              subPath: html
            - name: status
              mountPath: /usr/share/nginx/html/status

      volumes:
        - name: data
          nfs:
            path: /
            server: 192.168.56.200

        - name: status
          emptyDir:

        - name: nginx-conf
          configMap:
            name: nginx-conf
