hello-httproute-fqdn.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-httproute
spec:
  parentRefs:
  - name: contour
    namespace: projectcontour
  hostnames:
  - hello.stage.local
  rules:
  - backendRefs:
    - name: hello
      port: 80
