hello-httproute-path.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-httproute
spec:
  parentRefs:
  - name: contour
    namespace: projectcontour
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hello
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: hello
      port: 80
