hello-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: hello
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: hello
            port:
              number: 80
        path: /hello($|/)(.*)$
        pathType: ImplementationSpecific
  - http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /www($|/)(.*)$
        pathType: ImplementationSpecific
